# climate-extreme-indices

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  data_issue.md
.github/workflows/: tests.yml
climate_extremes/: __init__.py  constants.py  qc.py  utils.py  validation.py
climate_extremes/rainfall/: __init__.py  extremes.py  indices.py  spells.py
climate_extremes/temperature/: __init__.py  indices.py  percentiles.py  spells.py
climate_extremes/tests/: conftest.py  test_rainfall.py  test_temperature.py  test_validation.py
examples/: basic_usage.py  indonesia_case_study.py  jakarta_2015_2020.py  synthetic_data.py  synthetic_generator.py  visualization.py
tests/: conftest.py  test_qc.py  test_temperature.py
